# axum_x_twitter_clone

./: .env_example  Cargo.toml  README.md  compose.yml
migrations/: 0001_create_post_table.up.sql  0002_add_deleted_at_to_posts.down.sql  0002_add_deleted_at_to_posts.up.sql
src/: lib.rs  main.rs  state.rs
src/database/: connect.rs  mod.rs  queries.rs
src/router/: mod.rs
src/router/posts/: create.rs  delete.rs  get_all_top_level.rs  get_one.rs  mod.rs  update.rs
